# XiaoGuaRTC

./: .gitignore  CMakeLists.txt  README-EN.md  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  audio.c  audio.h  chat.c  chat.h  config.h  configuration_ap.c  display.c  display.h  idf_component.yml  main.c  network.c  network.h  request.c  request.h  system_info.c  system_info.h
